fix: h1 titles breaking on mobile

--- a/_sass/custom-utils/global.sass
+++ b/_sass/custom-utils/global.sass
@@ -96,3 +96,10 @@ span.delete-btn
 
 .dark-pink
   color: #AE6284 !important
+
+@media (max-width: 408px)
+  .title.is-1.responsive
+    font-size: 2.2em
+
+  .subtitle.is-3.responsive
+    font-size: 1em
